Python Notebook Updated

--- a/Snake_Detection.ipynb
+++ b/Snake_Detection.ipynb
@@ -27,9 +27,10 @@
         "\n",
         "## Necessary Tutorials: \n",
         "1. [Data Loading Basics](https://medium.com/@vijayabhaskar96/tutorial-on-keras-flow-from-dataframe-1fd4493d237c)\n",
-        "2. [Image classification via fine-tuning with EfficientNet](https://keras.io/examples/vision/image_classification_efficientnet_fine_tuning/)\n",
-        "3. [Basic Image Classification Tutorial](https://www.tensorflow.org/tutorials/images/classification)\n",
-        "4. [GitHub Project Repo](https://github.com/redwankarimsony/hackerearth-snake-in-the-hood/)\n",
+        "2. [Data Loading Advanced](https://www.kdnuggets.com/2019/11/deep-learning-image-classification-less-data.html)\n",
+        "3. [Image classification via fine-tuning with EfficientNet](https://keras.io/examples/vision/image_classification_efficientnet_fine_tuning/)\n",
+        "4. [Basic Image Classification Tutorial](https://www.tensorflow.org/tutorials/images/classification)\n",
+        "5. [GitHub Project Repo](https://github.com/redwankarimsony/hackerearth-snake-in-the-hood/)\n",
         "\n",
         "\n",
         "\n",
